fix flex wrapp en los ul de estado

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -104,6 +104,7 @@ canvas {
 
 #ok-letters {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     font-family: 'Permanent Marker', cursive;
     color:white;
@@ -112,6 +113,7 @@ canvas {
 
 #wrong-letter {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     color:red;
     font-family: 'Permanent Marker', cursive;
